Uygulama iconu ve adı değiştirildi, gece modu renk tonu ayarlandı.

--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">TasarimCalismasi</string>
+    <string name="app_name">Pizza</string>
     <string name="pizzaBaslik">Etli Peynirli</string>
     <string name="peynirYazi">Peynir</string>
     <string name="sucukYazi">Sucuk</string>
