--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">TasarimCalismasi</string>
+    <string name="app_name">Pizza</string>
     <string name="pizzaBaslik">Beef Cheese</string>
     <string name="peynirYazi">Cheese</string>
     <string name="sucukYazi">Sausage</string>
